# shadowrun-lore-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  deploy.sh  main.py  mise.toml  organize_sourcebooks.py  pyproject.toml
.claude/docs/: decisions.md  table-handling.md
docs/: 02-decisions.md  sourcebooks.csv  todo.md
src/: chunk_documents.py  clean_markdown.py  config.py  convert_pdfs_to_markdown.py  create_embeddings.py  evaluate.py  ingest.py  logs.py  normalise_pdf_filenames.py  postprocess_markdown.py  query.py  shadowtalk.py  strip_toc.py
tests/: rag_queries.md
